--- a/web-content/package.json
+++ b/web-content/package.json
@@ -32,27 +32,27 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/compiler-cli": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/platform-server": "~4.0.0",
-    "@angular/animations": "~4.0.0",
-    "@angular/router": "~4.0.0",
-    "@angular/tsc-wrapped": "~4.0.0",
-    "@angular/upgrade": "~4.0.0",
-    "@angular/animation": "^4.0.0-beta.8",
+    "@angular/common": "~5.1.0",
+    "@angular/compiler": "~5.1.0",
+    "@angular/compiler-cli": "~5.1.0",
+    "@angular/core": "~5.1.0",
+    "@angular/forms": "~5.1.0",
+    "@angular/http": "~5.1.0",
+    "@angular/platform-browser": "~5.1.0",
+    "@angular/platform-browser-dynamic": "~5.1.0",
+    "@angular/platform-server": "~5.1.0",
+    "@angular/animations": "~5.1.0",
+    "@angular/router": "~5.1.0",
+    "@angular/tsc-wrapped": "~5.1.0",
+    "@angular/upgrade": "~5.1.0",
+    "@angular/animation": "",
     "angular-in-memory-web-api": "~0.3.1",
     "jquery": "^3.2.1",
     "core-js": "^2.4.1",
     "path": "^0.12.7",
     "rxjs": "^5.4.3",
     "systemjs": "0.19.39",
-    "webpack": "^2.6.1",
+    "webpack": "3.10.0",
     "awesome-typescript-loader": "^3.1.3",
     "html-loader": "^0.4.5",
     "file-loader": "^0.11.2",
@@ -98,7 +98,7 @@
     "rollup-plugin-uglify": "^1.0.1",
     "source-map-explorer": "^1.3.2",
     "tslint": "^3.15.1",
-    "typescript": "~2.2.0",
+    "typescript": "~2.6.1",
     "style-loader": "^0.18.2",
     "css-loader": "^0.28.7",
     "postcss-loader": "^2.0.6",
